--- a/README
+++ b/README
@@ -1,2 +1,13 @@
 Allows users of booklove to download their data securely to be gdpr compliant. 
 Will be implemented when I have access to Heroku again :)
+
+
+## db structure
+
+CREATE TABLE user_data_download_links (
+    id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+    user_id UUID NOT NULL,
+    download_key TEXT UNIQUE NOT NULL,
+    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP NOT NULL,
+    expires_at TIMESTAMP NOT NULL
+);
